--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "node.js-tmplt",
+  "name": "abort-controller-pubJS",
   "version": "1.0.0",
-  "description": "Template for node.js apps",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "description": "Examples for the article",
   "scripts": {
-    "start": "node ./src",
-    "dev": "npx nodemon --inspect=9123 ./src",
-    "env:up": "docker compose up -d",
-    "env:down": "docker compose down",
-    "test": "mocha",
     "lint": "eslint ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/La7rodectus/node.js-tmplt.git"
+    "url": "git+https://github.com/La7rodectus/abort-controller-pubJS.git"
   },
   "author": "La7rodectus",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/La7rodectus/node.js-tmplt/issues"
+    "url": "https://github.com/La7rodectus/abort-controller-pubJS/issues"
   },
-  "homepage": "https://github.com/La7rodectus/node.js-tmplt#readme",
+  "homepage": "https://github.com/La7rodectus/abort-controller-pubJS#readme",
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/eslint-parser": "^7.17.0",
@@ -31,11 +22,6 @@
     "@babel/preset-env": "^7.16.11",
     "eslint": "^8.11.0",
     "eslint-config-metarhia": "^7.0.1",
-    "eslint-plugin-import": "^2.25.4",
-    "mocha": "^9.1.3",
-    "nodemon": "^2.0.15"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.0"
+    "eslint-plugin-import": "^2.25.4"
   }
 }
