fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abort-controller-pubJS",
+  "name": "abort-controller-pub.js",
   "version": "1.0.0",
   "description": "Examples for the article",
   "scripts": {
